changed isaac's title

--- a/about.html
+++ b/about.html
@@ -247,7 +247,7 @@
                    <h4 class="text-center text-white">
                     <br>
                        Isaack Kituru<br>
-                       CEO
+                       Director
                    </h4>
                 </div>
             </div>
